--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,3 +1,16 @@
+/* Mixin's */
+@mixin transition {
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+@mixin corners($radius) {
+  -moz-border-radius: $radius;
+  -webkit-border-radius: $radius;
+  border-radius: $radius;
+  -khtml-border-radius: $radius;
+}
+
 @mixin tablet {
   @media screen and (min-width: 768px) {
     @content;
