--- a/timer.css
+++ b/timer.css
@@ -1,11 +1,13 @@
 /* Variabes */ /* Mixin's */
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background: #fff;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  background-color: rgb(220, 220, 214);
 }
 
 li {
@@ -16,13 +18,81 @@ a {
   text-decoration: none;
 }
 
+.toggleSwitch {
+  display: flex;
+  margin: 1rem;
+}
+
+#dark-mode {
+  background-color: black;
+  color: white;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  color: #fff;
   text-align: center;
   margin: 30px auto;
   padding-bottom: 5rem;
@@ -37,8 +107,9 @@ a {
 .stopwatch-container {
   margin: 0 auto;
   margin-top: 1rem;
-  background-color: #ff0000;
-  border: 2px solid maroon;
+  background-color: #fff;
+  color: rgb(0, 0, 0);
+  border: 2px solid rgb(0, 0, 0);
   width: 400px;
   border-radius: 12px;
 }
@@ -70,9 +141,9 @@ h3 {
 button {
   border-radius: 5px;
   -khtml-border-radius: 5px;
-  background: #fff;
-  color: rgb(0, 0, 0);
-  border: 1px solid #fff;
+  background: rgb(0, 0, 0);
+  color: #fff;
+  border: 1px solid rgb(0, 0, 0);
   text-decoration: none;
   cursor: pointer;
   font-size: 1.2em;
@@ -83,9 +154,9 @@ button {
 }
 button:hover {
   transition: all 0.5s ease-in-out;
-  background: rgba(0, 0, 0, 0.814);
-  border: solid 1px #fff;
-  color: #fff;
+  background: #fff;
+  border: solid 1px rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
 }
 
 .cp-container {
