--- a/timer.scss
+++ b/timer.scss
@@ -1,14 +1,16 @@
 @use "./styles/variables.scss" as *;
 @use "./styles/mixins.scss" as *;
 
+// ====== CSS Reset ===========
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background: $base-color;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
-    Helvetica, Arial, "Lucida Grande", sans-serif;
-  background-color: rgb(220, 220, 214);
 }
 
 li {
@@ -19,10 +21,82 @@ a {
   text-decoration: none;
 }
 
+// ====== CSS Reset ===========
+
+.toggleSwitch {
+  display: flex;
+  margin: 1rem;
+}
+
+#dark-mode {
+  background-color: black;
+  color: white;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  // -webkit-transform: translateX(26px);
+  // -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
 .wrapper {
   @include columnCenter;
   margin: 0 auto;
-  color: $white;
   text-align: center;
   margin: 30px auto;
   padding-bottom: 5rem;
@@ -36,8 +110,9 @@ a {
 .stopwatch-container {
   margin: 0 auto;
   margin-top: 1rem;
-  background-color: $red;
-  border: 2px solid maroon;
+  background-color: $white;
+  color: $black;
+  border: 2px solid $black;
   width: 400px;
   border-radius: 12px;
 
@@ -66,9 +141,10 @@ h3 {
 
 button {
   @include corners(5px);
-  background: $base-color;
-  color: $black;
-  border: 1px solid $white;
+  background: $black;
+  color: $white;
+
+  border: 1px solid $black;
   text-decoration: none;
   cursor: pointer;
   font-size: 1.2em;
@@ -79,9 +155,9 @@ button {
 
   &:hover {
     @include transition;
-    background: $TrnsPrnt-black;
-    border: solid 1px $white;
-    color: $base-color;
+    background: $white;
+    border: solid 1px $black;
+    color: $black;
   }
 }
 
