--- a/timer.scss
+++ b/timer.scss
@@ -1,5 +1,14 @@
-@use "./styles/variables.scss" as *;
 @use "./styles/mixins.scss" as *;
+
+body[data-theme="light"] {
+  --color-1: #fff;
+  --color-2: #000000;
+}
+
+body[data-theme="dark"] {
+  --color-1: #000000;
+  --color-2: #fff;
+}
 
 // ====== CSS Reset ===========
 * {
@@ -10,7 +19,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: $base-color;
+  background-color: var(--color-1);
 }
 
 li {
@@ -23,96 +32,68 @@ a {
 
 // ====== CSS Reset ===========
 
-.toggleSwitch {
-  display: flex;
-  margin: 1rem;
+.theme-switcher {
+  position: absolute;
+  right: 30px;
+  top: 10px;
 }
 
-#dark-mode {
-  background-color: black;
-  color: white;
-}
-
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
+input {
   width: 0;
   height: 0;
+  display: none;
+  visibility: hidden;
 }
 
-/* The slider */
-.slider {
-  position: absolute;
+label {
   cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: 0.4s;
+  display: block;
+  text-indent: -9999px;
+  height: 30px;
+  width: 60px;
+  border-radius: 50px;
+  background-color: var(--color-1);
+  transition: 0.5s ease background-color;
+  border: 2px solid var(--color-2);
 }
 
-.slider:before {
+label:after {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  transition: 0.4s;
+  width: 20px;
+  height: 20px;
+  border-radius: 50px;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  background-color: rgb(46, 42, 68);
+  transition: 0.5s ease;
 }
 
-input:checked + .slider {
-  background-color: #2196f3;
+input:checked + label:after {
+  left: calc(100% - 25px);
+  background-color: aliceblue;
 }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196f3;
-}
-
-input:checked + .slider:before {
-  // -webkit-transform: translateX(26px);
-  // -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
+input:checked + label {
+  background-color: rgb(25, 26, 37);
+  border: 2px solid whitesmoke;
 }
 
 .wrapper {
+  width: 100vw;
+  height: 80vh;
+  background-color: var(--color-1);
   @include columnCenter;
-  margin: 0 auto;
   text-align: center;
-  margin: 30px auto;
-  padding-bottom: 5rem;
-  width: 85%;
-
-  @include desktop {
-    width: 95%;
-  }
 }
 
 .stopwatch-container {
   margin: 0 auto;
   margin-top: 1rem;
-  background-color: $white;
-  color: $black;
-  border: 2px solid $black;
+  background-color: var(--color-1);
+  color: var(--color-1);
+  border: 2px solid var(--color-2);
   width: 400px;
   border-radius: 12px;
 
@@ -134,6 +115,13 @@ h3 {
   text-transform: uppercase;
 }
 
+h1,
+h2,
+h3,
+p {
+  color: var(--color-2);
+}
+
 #seconds,
 #tens {
   font-size: 2em;
@@ -141,10 +129,9 @@ h3 {
 
 button {
   @include corners(5px);
-  background: $black;
-  color: $white;
-
-  border: 1px solid $black;
+  background: var(--color-1);
+  color: var(--color-2);
+  border: 2px solid var(--color-2);
   text-decoration: none;
   cursor: pointer;
   font-size: 1.2em;
@@ -155,20 +142,20 @@ button {
 
   &:hover {
     @include transition;
-    background: $white;
-    border: solid 1px $black;
-    color: $black;
+    background: var(--color-2);
+    color: var(--color-1);
   }
 }
 
 .cp-container {
+  color: var(--color-2);
+  font-size: 14px;
   margin-bottom: 10rem;
+
   &__copyright {
     display: flex;
     justify-content: center;
-    font-size: 14px;
-    color: $black;
-    border-top: 1px solid $black;
+    border-top: 1px solid var(--color-2);
     padding-top: 2rem;
     margin: 0 2rem;
   }
