--- a/timer.scss
+++ b/timer.scss
@@ -13,6 +13,7 @@ body[data-theme="dark"] {
 // ====== CSS Reset ===========
 * {
   font-family: Arial, Helvetica, sans-serif;
+  transition: all 0.5s;
 }
 
 body {
